+ initial implementation of new fpmake compile tools
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@435 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -536,6 +536,8 @@ fcl/db/dbase/dbf_str_pt.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 fcl/db/dbase/dbf_str_ru.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/dbf_struct.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/dbf_wtil.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/dbase/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/dbase/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/history.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/package.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dbase/readme.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -547,20 +549,29 @@ fcl/db/ddg_ds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/ddg_rec.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/dsparams.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/fields.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/interbase/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/interbase/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/interbase/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/interbase/interbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/interbase/testib.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/memds/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/memds/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/memds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testcp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testld.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testopen.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/memds/testpop.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/mysql/mtest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/mysql/mysqldb3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/mysql/mysqldb4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/odbc/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/fpodbc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/testbcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/testcon.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -575,15 +586,25 @@ fcl/db/odbc/testsql.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/testst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/odbc/testtl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sdf/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sdf/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/sdfdata.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/testfix.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sdf/testsdf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/interbase/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/interbase/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/interbase/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/interbase/ibconnection.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/mysql4conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/postgres/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/postgres/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/postgres/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/postgres/pqconnection.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/sqldb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/testsqldb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -592,11 +613,14 @@ fcl/db/sqlite/browseds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 fcl/db/sqlite/concurrencyds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/createds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/fillds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqlite/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqlite/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/sqlitedataset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/sqliteds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqlite/testds.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/tests/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/tests/createds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/tests/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/tests/testds.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/tests/tested.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -609,6 +633,8 @@ fcl/fpcunit/exampletests/money.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 fcl/fpcunit/exampletests/moneytest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/exampletests/testmockobject.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/fpcunit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/fpcunit/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/fpcunit/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/testdecorator.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/testregistry.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/testreport.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -618,6 +644,7 @@ fcl/fpcunit/tests/frameworktest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dst
 fcl/fpcunit/tests/suitetest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/testutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/fpcunit/ubmockobject.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/freebsd/syncobjs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/go32v2/custapp.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/go32v2/eventlog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -641,6 +668,8 @@ fcl/image/fpimage.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fpimage.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fpimgcanv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fpimgcmn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/image/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/image/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fppalette.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fppen.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/image/fppixlcanv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -675,6 +704,8 @@ fcl/inc/eventlog.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/ezcgi.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/felog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/fpasync.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/inc/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/inc/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/gettext.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/idea.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/inifiles.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -702,6 +733,8 @@ fcl/inc/xregreg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/inc/zstream.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/linux/syncobjs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/net/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/net/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/net/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/net/fpsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/net/httpbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/net/httpclient.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -732,6 +765,8 @@ fcl/os2/ezcgi.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/os2/pipes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/os2/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/passrc/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/passrc/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/pastree.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/paswrite.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/passrc/pparser.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -748,6 +783,8 @@ fcl/shedit/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/classes.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/doc_text.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/drawing.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/shedit/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/shedit/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/gtk/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/gtk/gtkdemo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/shedit/gtk/gtkshedit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -838,6 +875,8 @@ fcl/win32/winreg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/dom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/dom_html.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/xml/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/xml/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/htmldefs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/htmwrite.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/sax.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
