+ Initial implementation of new fpmake system
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@436 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3025,6 +3025,11 @@ rtl/bsd/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/bsd/unxsysch.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/bsd/x86_64/syscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/bsd/x86_64/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/common/fpmake.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/common/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/common/fpmkpkg.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/common/fpmkpkg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/common/fpmkunit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/console.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/errno.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
