--- a/.gitattributes
+++ b/.gitattributes
@@ -202,6 +202,17 @@ compiler/mips/rmipssri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 compiler/mips/rmipssta.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/mips/rmipsstd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/mips/rmipssup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorct.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errord.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errore.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errores.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorf.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorhe.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorn.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorpl.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorpli.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorr.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorrw.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msgidx.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msgtxt.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/nadd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
