+ tests/packages * tw3920.pp moved
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@565 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3956,6 +3956,7 @@ tests/bench/shootout/src/takfp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 tests/bench/shootout/src/wc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/timer.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/whet.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/packages/webtbs/tw3820.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/readme.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/tbf/tb0001.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/tbf/tb0002.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -5786,7 +5787,6 @@ tests/webtbs/tw3796.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3805.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3812.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3814.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-tests/webtbs/tw3820.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3827.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3833.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3840.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
