* updated everything to MySQL 4.1.10a
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@602 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1344,6 +1344,7 @@ packages/base/mysql/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 packages/base/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/my4_sys.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3_com.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3_comdyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
