--- a/.gitattributes
+++ b/.gitattributes
@@ -5020,6 +5020,7 @@ tests/test/units/system/ttrunc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 tests/test/units/sysutils/execansi.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sysutils/execedbya.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sysutils/extractquote.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/sysutils/tsscanf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uprocext1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uprocext2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/utasout.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
