--- a/.gitattributes
+++ b/.gitattributes
@@ -213,6 +213,7 @@ compiler/msg/errorpl.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msg/errorpli.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msg/errorr.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msg/errorrw.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/msg/errorues.msg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msgidx.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/msgtxt.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/nadd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
