* replace divisions by constants with a combination of mul, shift, add from     the ppc compiler writers guide   + test program for above optimization   (both by Thomas Schatzl)
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@912 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -4788,6 +4788,7 @@ tests/test/cg/tloadvmt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 tests/test/cg/tlohi.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tmanypar.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tmoddiv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/cg/tmoddiv2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tneg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tnot.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tobjsiz2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
