--- a/.gitattributes
+++ b/.gitattributes
@@ -3223,6 +3223,11 @@ rtl/freebsd/unxfunc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/unxsockh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/unxsysc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/x86_64/bsyscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/gba/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/gba/fpc4gba.txt svn_eol_002dstyle=native
+rtl/gba/sysgba.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/gba/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/gba/unix.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
