--- a/.gitattributes
+++ b/.gitattributes
@@ -3224,7 +3224,8 @@ rtl/freebsd/unxsockh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/unxsysc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/x86_64/bsyscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/gba/fpc4gba.txt svn_eol_002dstyle=native
+rtl/gba/fpc4gba.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/gba/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/sysgba.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/unix.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
